--- a/software.bib
+++ b/software.bib
@@ -7,6 +7,14 @@
   url = {https://www.R-project.org/},
 }
 
+@Manual{R-ggcorrplot,
+  title = {ggcorrplot: Visualization of a Correlation Matrix using ggplot2},
+  author = {Alboukadel Kassambara},
+  year = {2023},
+  note = {R package version 0.1.4.1},
+  url = {http://www.sthda.com/english/wiki/ggcorrplot-visualization-of-a-correlation-matrix-using-ggplot2},
+}
+
 @Manual{R-here,
   title = {here: A Simpler Way to Find Your Files},
   author = {Kirill Müller},
